fix: Improve navbar design

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "paths": {
-    "@components/*": ["components/*"]
-  }
+  // "paths": {
+  //   "@components/*": ["src/components/*"]
+  // }
 }
